--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Simple Math Challenge</title>
+    <link rel="shortcut icon" href="imgs/logoIcon.png" type="image/x-icon">
 </head>
 <body>
     <div class="alert-content-container" style="display: none;">
