added header and footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="shortcut icon" href="imgs/logoIcon.png" type="image/x-icon">
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        <div class="branding">
+            <img src="imgs/logoIcon.png" alt="Simple Math Challenge Logo">
+            <div class="medium-screen-header">
+                <h1 class="branding-name">Simple Math Challenge</h1>
+            </div>
+            <div class="small-screen-header" style="display: none;">
+                <h1 class="branding-name">Simple Math<br/>Challenge</h1>
+            </div>
+        </div>
+    </header>
     <div class="alert-content-container" style="display: none;">
         <div class="alert-container">
             <div class="alert-details">
@@ -87,6 +99,19 @@
         </section>
 
     </main>
+    <footer>
+        <div class="footerA">
+            <p>©2023 
+                <a href="https://www.castmere.com" target="_blank" rel="noopener noreferrer">
+                    <strong>AnnaTayo</strong>
+                </a> | All Rights Reserved.
+            </p>
+        </div>
+        <div class="footerB" style="display: none;">
+            <p>©2023 <a href="https://www.castmere.com" target="_blank" rel="noopener noreferrer"><strong>AnnaTayo</strong></a></p>
+            <p>All Rights Reserved.</p>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
